--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta charset="utf-8">
     <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1.1, user-scalable=no" name="viewport" />
 	<script src="js/jquery.js" type="text/javascript"></script>
-	<!--<script src="js/scriptHP.js"></script>-->
+	<script src="js/scriptHP.js"></script>
 	</head>
 <body>
-<a href="tel:604-523-0120" class="btn btn-md btn-default icon-phone">Call</a>
+<div id="spinner"><img src="images/ajax-loader.gif"></div>
 </body>
 </html>
