--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1.1, user-scalable=no" name="viewport" />
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/scriptHP.js"></script>
+    <script src="cordova.js"></script>
 	</head>
 <body>
 <div id="spinner"><img src="images/ajax-loader.gif"></div>
