--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="cordova.js"></script>
 	</head>
 <body>
-<div id="spinner"><img src="images/ajax-loader.gif"></div>
+<!--<div id="spinner"><img src="images/ajax-loader.gif"></div>-->
+<a href="http://digitardesigns.com" target="_blank">Visit</a>
 </body>
 </html>
