--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="cordova.js"></script>
 	</head>
 <body>
-<!--<div id="spinner"><img src="images/ajax-loader.gif"></div>-->
-<a href="http://digitardesigns.com" target="_blank">Visit</a>
+<div id="spinner"><img src="images/ajax-loader.gif"></div>
 </body>
 </html>
