--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
     <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1.1, user-scalable=no" name="viewport" />
 	<script src="js/jquery.js" type="text/javascript"></script>
-	<!--<script src="js/scriptHP.js"></script>-->
+	<script src="js/scriptHP.js"></script>
     <script src="cordova.js"></script>
 	</head>
 <body>
