--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="cordova.js"></script>
 	</head>
 <body>
+<div class="ps-pages">
 <div id="spinner"><img src="images/ajax-loader.gif"></div>
+</div>
 </body>
 </html>
